# CCTemplate

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org  doc.org  start.el  start.sh
includes/: config.h
